--- a/views/sale_order_views.xml
+++ b/views/sale_order_views.xml
@@ -5,11 +5,23 @@
     <field name="model">sale.order</field>
     <field name="inherit_id" ref="sale.view_order_form"/>
     <field name="arch" type="xml">
-      <xpath expr="//sheet/group/group" position="after">
-        <group string="Custom Info">
-          <field name="x_test_field"/>
-        </group>
+      <xpath expr="//field[@name='partner_id']" position="after">
+                    <field name="cus_po_issue_date"/>
+                    <field name="cus_ex_fact_date"/>
+                    <field name="cus_proforma_number"/>
+                    <field name="cus_buyer_order_no"/>
+                    <field name="country_origin"/>
+                    <field name="gst_treatment"/>
       </xpath>
+       <!-- Rename ALL labels for date_order -->
+        <xpath expr="//label[@for='date_order']" position="attributes">
+          <attribute name="string">Order Date</attribute>
+        </xpath>
+        <xpath expr="//field[@name='payment_term_id']" position="after">
+          <field name="planning_days"/>
+          <field name="rev_vendor_ex_date"/>
+          <field name="vendor_id"/>
+        </xpath>
     </field>
   </record>
   <record id="action_partner_vendors" model="ir.actions.act_window">
