--- a/views/sale_order_line_views.xml
+++ b/views/sale_order_line_views.xml
@@ -26,5 +26,13 @@
             </xpath>
         </field>
     </record>
-
+    <record id="product_template_form_view_remove_sales_button" model="ir.ui.view">
+        <field name="name">product.template.form.view.remove.sales.button</field>
+        <field name="model">product.template</field>
+        <field name="inherit_id" ref="sale.product_template_form_view_sale_order_button"/>
+        <field name="arch" type="xml">
+            <!-- Remove the "Sold" button -->
+            <xpath expr="//div[@name='button_box']/button[@name='action_view_sales']" position="replace"/>
+        </field>
+    </record>
 </odoo>
