--- a/views/sale_order_line_views.xml
+++ b/views/sale_order_line_views.xml
@@ -23,6 +23,106 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='product_id']" position="after">
                 <field name="product_image" widget="image" options="{'size': [64, 64]}"/>
+                 <field name="country_id" />
+                 <field name="container_no" />
+                 <field name="stuffed_date" />
+                 <field name="vendor_Ex_Fact_date" />
+                 <field name="shipped_date" />
+                 <field name="cus_buyer_order_no" />
+                 <field name="vendor_product_code" />
+                 
+            </xpath>
+             <xpath expr="//sheet" position="inside">
+             <group string="Quantity Details"  col="2">
+                <group >
+                    <field name="product_uom_qty" />
+                    <field name="shipped_Qty" />
+                    <field name="invoiced_Qty" />
+                </group>
+                <group >
+                <field name="inner_Qty" />
+                <field name="master_Qty" />
+                <field name="discount_Qty" />
+
+                </group>
+             </group>
+              <group string="Price and Amount Details"  col="2">
+                <group >
+                    <field name="price_unit" />
+                    <field name="price_subtotal" />
+                    <field name="currency_id" />
+                </group>
+                <group >
+                <!-- <field name="tax_id" context="{'multi_company': True}" /> -->
+                <field name="price_tax2" />
+                <field name="price_total" />
+
+                </group>
+             </group>
+
+             <group string="CBM"  col="2">
+                <group >
+                    <field name="unit_CBM" />
+                    
+                </group>
+                <group >
+                <field name="cbm" />
+                
+
+                </group>
+             </group>
+
+             <group string="Inspection Details"  col="2">
+                <group >
+                    <field name="inline_insp_quantity" />
+                    <field name="midline_insp_quantity" />
+                    <field name="final_insp_quantity" />
+                    <field name="oca_insp_quantity" />
+                <field name="inspection" />
+                </group>
+                <group >
+                <field name="inline_bal_quantity" />
+                <field name="midline_bal_quantity" />
+                <field name="final_bal_quantity" />
+                <field name="OCA_bal_quantity" />
+                <field name="inspection_state" />
+
+                </group>
+             </group>
+            </xpath>
+
+             
+              
+
+        </field>
+    </record>
+    <record id="sale_order_line_view_custom_tree" model="ir.ui.view">
+        <field name="name">sale.order.line.tree.inherit.custom</field>
+        <field name="model">sale.order.line</field>
+        <field name="inherit_id" ref="sale.view_order_line_tree"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='order_id']" position="after">
+                <field name="product_image" widget="image" options="{'size': [64, 64]}"/>
+                    <field name="product_id" />
+                   <field name="vendor_id" />
+                   <field name="product_uom" />
+                   <field name="inspection_state" />
+                   <field name="order_state" />
+                    <field name="shipped_date" optional="hide"/>
+                    <field name="cus_po_issue_date" optional="hide"/>
+                    <field name="cus_ex_fact_date" optional="hide"/>
+                    <field name="cus_buyer_order_no" optional="hide"/>
+                    <field name="inline_insp_quantity" optional="hide"/>
+                    <field name="midline_insp_quantity" optional="hide"/>
+                    <field name="final_insp_quantity" optional="hide"/>
+                    <field name="oca_insp_quantity" optional="hide"/>
+                    <field name="midline_bal_quantity" optional="hide"/>
+                    <field name="final_bal_quantity" optional="hide"/>
+                    <field name="OCA_bal_quantity" optional="hide"/>
+                    <field name="unit_CBM" optional="hide"/>
+                    <field name="cbf" optional="hide"/>
+                    <field name="invoiced_Qty" optional="hide"/>
+                    <field name="shipped_Qty" optional="hide"/>
             </xpath>
         </field>
     </record>
