--- a/views/sale_order_line_views.xml
+++ b/views/sale_order_line_views.xml
@@ -35,7 +35,7 @@
              <xpath expr="//sheet" position="inside">
              <group string="Quantity Details"  col="2">
                 <group >
-                    <field name="product_uom_qty" />
+                   
                     <field name="shipped_Qty" />
                     <field name="invoiced_Qty" />
                 </group>
@@ -48,14 +48,14 @@
              </group>
               <group string="Price and Amount Details"  col="2">
                 <group >
-                    <field name="price_unit" />
-                    <field name="price_subtotal" />
+                    <!-- <field name="price_unit" />
+                    <field name="price_subtotal" /> -->
                     <field name="currency_id" />
                 </group>
                 <group >
                 <!-- <field name="tax_id" context="{'multi_company': True}" /> -->
-                <field name="price_tax2" />
-                <field name="price_total" />
+                <!-- <field name="price_tax2" />
+                <field name="price_total" /> -->
 
                 </group>
              </group>
@@ -105,7 +105,7 @@
                 <field name="product_image" widget="image" options="{'size': [64, 64]}"/>
                     <field name="product_id" />
                    <field name="vendor_id" />
-                   <field name="product_uom" />
+                   <!-- <field name="product_uom" /> -->
                    <field name="inspection_state" />
                    <field name="order_state" />
                     <field name="shipped_date" optional="hide"/>
