--- a/views/sale_order_line_views.xml
+++ b/views/sale_order_line_views.xml
@@ -30,6 +30,9 @@
                  <field name="shipped_date" />
                  <field name="cus_buyer_order_no" />
                  <field name="vendor_product_code" />
+                  <field name="company_id" />
+                  <field name="buyer_id" />
+                  <field name="vendor_id" />
                  
             </xpath>
              <xpath expr="//sheet" position="inside">
