taxes-shipped-date-fixed

--- a/views/sale_order_line_views.xml
+++ b/views/sale_order_line_views.xml
@@ -68,7 +68,7 @@
                     <field name="unit_CBM" />
                 </group>
                 <group >
-                <field name="cbm" />
+                <field name="total_cbm" />
                 </group>
              </group>
 
@@ -120,7 +120,7 @@
                     <field name="final_bal_quantity" optional="hide"/>
                     <field name="OCA_bal_quantity" optional="hide"/>
                     <field name="unit_CBM" optional="hide"/>
-                    <field name="cbm" optional="hide"/>
+                    <field name="total_cbm" optional="hide"/>
                     <field name="invoiced_Qty" optional="hide"/>
                     <field name="shipped_Qty" optional="hide"/>
             </xpath>
