--- a/views/sale_order_views.xml
+++ b/views/sale_order_views.xml
@@ -14,7 +14,11 @@
           <field name="inspection_count" widget="statinfo"/>
       </button>
     </xpath>
+      <xpath expr="//field[@name='tag_ids']" position="after">
 
+          <field name="cus_po_upload_no"/>
+        
+      </xpath>
       <xpath expr="//field[@name='partner_id']" position="after">
                     <field name="cus_po_issue_date"/>
                     <field name="cus_ex_fact_date"/>
