--- a/views/sale_order_line_views.xml
+++ b/views/sale_order_line_views.xml
@@ -9,7 +9,7 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='order_line']/tree/field[@name='product_id']" position="before">
                 <field name="product_image" widget="image" options="{'size': [32, 32]}"/>
-                <!-- <field name="buyer_style_no" /> -->
+                <field name="buyer_style_no" />
                 <field name="vendor_id"/>
             </xpath>
         </field>
@@ -105,6 +105,7 @@
                 <field name="product_image" widget="image" options="{'size': [64, 64]}"/>
                     <field name="product_id" />
                    <field name="vendor_id" />
+                   <field name="buyer_style_no" />
                    <!-- <field name="product_uom" /> -->
                    <field name="inspection_state" />
                    <field name="order_state" />
